--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.11.0",
+    "@azure/msal-react": "^3.0.10",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -32,9 +34,9 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "node-appwrite": "^13.0.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-phone-number-input": "^3.4.3",
